--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "showdown": "^1.9.1"
   }
 }
